# ROCK

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  pyproject.toml  requirements_admin.txt  requirements_sandbox_actor.txt  search-index.json  sitemap.xml  stats.json  xrl
.codex/environments/: environment.toml
.github/scripts/: get-CI-result.sh  trigger-CI.sh  trigger-docs.sh  trigger-merge.sh
.github/workflows/: CI-request-trigger.yml  daily-stats.yml  deploy.yml  python-ci.yml
assets/css/: styles.0163343e.css  styles.151b2f83.css  styles.73d01eef.css  styles.a563696a.css  styles.c27f374e.css
assets/js/: 02f2a8f2.383a06ee.js  02f2a8f2.5f463591.js  02f2a8f2.8ac07334.js  02f2a8f2.a5e26453.js  02f2a8f2.a735e63b.js  02f2a8f2.b3c8ea0a.js  02f2a8f2.c0c8e7da.js  02f2a8f2.c9a7a0ae.js  02f2a8f2.ca9441d8.js  02f2a8f2.ddf9f734.js  02f2a8f2.e71222a7.js  02f2a8f2.ed611794.js  02f2a8f2.ffb22c53.js  040dc0ae.0e09e2d8.js  040dc0ae.13754685.js  040dc0ae.1e623bc9.js  040dc0ae.2859b2fe.js  040dc0ae.3926ed6a.js  040dc0ae.4959da10.js  040dc0ae.55b03606.js  040dc0ae.5ab3aad4.js  040dc0ae.61d77624.js  040dc0ae.8ab9cfbb.js  040dc0ae.975271b6.js  040dc0ae.a1ce3a71.js  040dc0ae.c0bb5e8e.js  040dc0ae.c92c54d1.js  040dc0ae.cfd49270.js  040dc0ae.d4ffe133.js  040dc0ae.d7887d8b.js  040dc0ae.e0725945.js  040dc0ae.e52b8cb7.js  040dc0ae.ed5a18b7.js  040dc0ae.ee9b81d2.js  040dc0ae.f003bbac.js  053bfa5a.1ba7f946.js  053bfa5a.3c8227f8.js  053bfa5a.4a6b4907.js  053bfa5a.b4c1846f.js  05649551.093c21fc.js  (+6512 more)
careers/: index.html
docs/: docusaurus.config.js  package.json  sidebars.js  versions.json
docs/0.2.x/: search-index.json
docs/1.0.x/: search-index.json
docs/1.1.x/: search-index.json
docs/1.10.x/: search-index.json
docs/1.2.x/: search-index.json
docs/1.3.x/: search-index.json
docs/1.4.x/: search-index.json
docs/1.5.x/: search-index.json
docs/1.6.x/: search-index.json
docs/1.8.x/: search-index.json
docs/1.9.x/: search-index.json
docs/Release Notes/: index.html
docs/overview/: index.html
docs/plans/: opensandbox-operator-plan.md  opensandbox-sdk-contract.md
docs/rock/: overview.md  rockroll.md
docs/versioned_sidebars/: version-1.11.x-sidebars.json  version-1.3.x-sidebars.json
examples/: download_file_demo.py  sandbox_proxy_demo.py
examples/bash/: simple_bash_job_demo.sh
examples/harbor/: harbor_demo.py  swe_job_config-verifier.yaml.template  swe_job_config.yaml.template  tb_job_config.yaml.template
markdown-page/: index.html
rock/: __init__.py  _codes.py  config.py  env_vars.py  logger.py
rock-conf/: rock-dev.yml  rock-local-proxy.yml  rock-local.yml
rock/actions/: __init__.py
rock/admin/: main.py
rock/cli/: main.py
rock/common/: constants.py  exception.py  port_validation.py  validation.py
rock/deployments/: config.py  docker.py  manager.py  ray.py  runtime_env.py  status.py
rock/rocklet/: exceptions.py  linux.py  local_api.py  local_sandbox.py  rocklet.py  server.py
rock/sandbox/: base_actor.py  base_manager.py  gem_manager.py  remote_sandbox.py  sandbox_actor.py  sandbox_manager.py  sandbox_meta_store.py  sandbox_statemachine.py
rock/ts-sdk/: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
rock/utils/: __init__.py  archive_command.py  cgroup_stats.py  concurrent_helper.py  deprecated.py  docker.py  format.py  http_pool.py  (+4 more)
scripts/: gen_ddl.py  gen_statemachine_diagram.py  redis_stress_test.py  redis_timeout_diagnosis.py
search/: index.html
sql/: sandbox_record.sql  scheduler_task.sql
stats/: index.html
tests/: conftest.py
zh-Hans/: 404.html  index.html  search-index.json  sitemap.xml
(+7663 files in other folders)
